--- a/Gardening/.settings/org.eclipse.core.resources.prefs
+++ b/Gardening/.settings/org.eclipse.core.resources.prefs
@@ -1,2 +1,3 @@
 eclipse.preferences.version=1
+encoding//src/main/resources/sqlPAC/Dec22_Spring\uC73C\uB85C\ \uAD6C\uD604\uD560\uAC70\ SQL\ \uCFFC\uB9AC.sql=UTF-8
 encoding/<project>=UTF-8
